[tool.poetry]
name = "ServerCloner"
version = "0.1.0"
description = ""
authors = ["By Bad"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
discord = "^1.7.3"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
